mix node results in crash upon render #31645

Closed
opened 2012-05-30 06:22:33 +02:00 by aaron somerfield · 8 comments

%%%if there are no images on the image input nodes, then the "desert (custom)" image belongs to the minimized image input node, while the picture of me belongs to the maximized image input node (the far left node).

to replicate the glitch, make sure autorender is on and connect the "image out" on the minimised image input node to the bottom "image in" on the mix node. if the program does not crash, connect the image out on the mix node to the compositor image in. if still nothing, switch the two "image in" connectors on the mix node. at least one of these methods should replicate the problem. it occurs when blender automatically renders the output (i don't mean when the user clicks render, but when blender renders the preview)%%%

%%%if there are no images on the image input nodes, then the "desert (custom)" image belongs to the minimized image input node, while the picture of me belongs to the maximized image input node (the far left node). to replicate the glitch, make sure autorender is on and connect the "image out" on the minimised image input node to the bottom "image in" on the mix node. if the program does not crash, connect the image out on the mix node to the compositor image in. if still nothing, switch the two "image in" connectors on the mix node. at least one of these methods should replicate the problem. it occurs when blender automatically renders the output (i don't mean when the user clicks render, but when blender renders the preview)%%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Hi Aaron,

I have tried what you described, but have not been able to reproduce this crash. can you give more information (system information, build number etc)

Thanks,
Jeroen%%%

%%%Hi Aaron, I have tried what you described, but have not been able to reproduce this crash. can you give more information (system information, build number etc) Thanks, Jeroen%%%

%%%I had the same issue yesterday with r47083. I just added a text object, enabled the cycles preview (software mode) and added a material. As soon i exchanged the diffuse-shader with a mix-shader (inside material tab of the properties window) it crashed. I could repeat this this behavior multiple times. As i started my bug report and tested if my steps would reproduce the issue it didn't happen. So it is quite random. An synchronization issue?%%%

%%%I had the same issue yesterday with r47083. I just added a text object, enabled the cycles preview (software mode) and added a material. As soon i exchanged the diffuse-shader with a mix-shader (inside material tab of the properties window) it crashed. I could repeat this this behavior multiple times. As i started my bug report and tested if my steps would reproduce the issue it didn't happen. So it is quite random. An synchronization issue?%%%

%%%I appended a simple example file ("untitled.blend"). Steps to reproduce:

a) Switch the bottom right window to "rendered"
b) Exchange the diffuse shader node with the mix shader node (Properties window on the right)

I could repeat the crash multiple times by executing this steps. But it doesn't matter if the oder is a,b or b,a.
%%%

%%%I appended a simple example file ("untitled.blend"). Steps to reproduce: a) Switch the bottom right window to "rendered" b) Exchange the diffuse shader node with the mix shader node (Properties window on the right) I could repeat the crash multiple times by executing this steps. But it doesn't matter if the oder is a,b or b,a. %%%
Member

%%%seems to be a generic node editor issue. More investigation is needed. assigning to nobody as it is not sure it is related to compositing.%%%

%%%seems to be a generic node editor issue. More investigation is needed. assigning to nobody as it is not sure it is related to compositing.%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%if you keep trying, it WILL eventually crash. at best, it remained operational and non-crashed for no more than 5 minutes of playing around with the mix node. so try changing settings, adding the output of the mix node to other output nodes (such as viewer or compositor nodes) and i will be surprised if it doesn't crash. it seems to crash upon completion of the auto-render (the self-render that occurs when you change a setting) most times.

OS: windows 7 enterprise
4GB RAM
no graphics card (using onboard graphics processing)%%%

%%%if you keep trying, it WILL eventually crash. at best, it remained operational and non-crashed for no more than 5 minutes of playing around with the mix node. so try changing settings, adding the output of the mix node to other output nodes (such as viewer or compositor nodes) and i will be surprised if it doesn't crash. it seems to crash upon completion of the auto-render (the self-render that occurs when you change a setting) most times. OS: windows 7 enterprise 4GB RAM no graphics card (using onboard graphics processing)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31645
No description provided.