Fix #31645, mix node results in crash upon render. This happens when unused mix nodes are removed from the cycles graph. In case the inputs are both unconnected it still tried to reconnect them.